# stark-pure-rust

./: .gitmodules  Cargo.toml  Dockerfile  README.md
src/: f7.rs  ff_utils.rs  fft.rs  fp.rs  fri.rs  lib.rs  main.rs  merkle_tree.rs  mimc_stark.rs  permuted_tree.rs  poly_utils.rs  utils.rs
